--- a/TravelOrganizationSystem/WebApp/Pages/Destinations/Index.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Destinations/Index.cshtml
@@ -50,7 +50,7 @@
             }
 
             <!-- Delete Confirmation Modal -->
-            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true" data-bs-backdrop="false">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content dark-theme-card">
                         <div class="modal-header">
