--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
@@ -184,7 +184,7 @@
     </footer>
 
     <!-- Newsletter Thank You Modal -->
-    <div class="modal fade" id="newsletterModal" tabindex="-1" aria-labelledby="newsletterModalLabel" aria-hidden="true">
+    <div class="modal fade" id="newsletterModal" tabindex="-1" aria-labelledby="newsletterModalLabel" aria-hidden="true" data-bs-backdrop="false">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content newsletter-modal">
                 <div class="modal-header border-0">
