--- a/TravelOrganizationSystem/WebApp/Pages/Trips/MyBookings.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Trips/MyBookings.cshtml
@@ -162,7 +162,7 @@
 </div>
 
 <!-- Cancel Confirmation Modal -->
-<div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+<div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true" data-bs-backdrop="false">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content dark-theme-card" style="border: 1px solid rgba(231, 76, 60, 0.3);">
             <div class="modal-header border-0" style="background: rgba(231, 76, 60, 0.1);">
